@startuml

class App
{

}

class Game
{
}

class PlayerController
{
}

class Match
{
}

class Piece
{
}

class PieceDefinition
{
}

class Board
{
}

class Actor
{
}

Piece --|> Actor
Board --|> Actor
App *-- Game
Game *-- Match
Game *-- PlayerController
Board *-- Piece
PlayerController *-- Piece
Piece *-- PieceDefinition

@enduml
